# mpq-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: archive.rs  header.rs  lib.rs  run.rs  seeker.rs  table.rs  util.rs
src/core/: archive.rs  creator.rs  header.rs  mod.rs  seeker.rs  table.rs  util.rs
tests/: w3x_list.rs
