[package]
name = "mpq-rs"
description = "A pure-rust implementation of a MoPaQ archive reader and writer"
version = "0.1.0"
authors = ["ElusiveMori <mori@reu.moe>", "nazarpunk <nazarpunk@gmail.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/WarRaft/mpq-rs"
keywords = ["mpq", "blizzard", "mopaq", "warcraft"]
categories = ["encoding", "parsing"]
license = "MIT"

[dependencies]
byteorder = "1.3.2"
lazy_static = "1.3.0"
byte-slice-cast = "1.2.3"
flate2 = "1.0.9"
bzip2 = "0.6.0"
indexmap = "2.11.4"
